add minio minimal